<resources>
    <string name="app_name">EatScape</string>
    <string name="next">Next</string>
    <string name="enjoy_restaurant_meals_at_your_hostel">Enjoy Restaurant Meals at your Hostel</string>
    <string name="todo">TODO</string>
    <string name="facebook">Facebook</string>
    <string name="get_your_fav_food">Get your Fav Food</string>
    <string name="eatscape">EatScape</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="todo1">TODO</string>
    <string name="or">or</string>
    <string name="continue_with">Continue with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="location">Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="explore_food_options">Explore Food Options</string>
    <string name="food_name">Food Name</string>
    <string name="rs_279">Rs.279</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="menu">Menu\n</string>
    <string name="recent_buy">Recent Buy</string>
    <string name="foodname">FoodName</string>
    <string name="rs299">Rs299</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="buy_again">Buy Again</string>
</resources>