<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/baimg"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/bir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bafn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/foodname"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/bap"
                app:layout_constraintStart_toEndOf="@+id/baimg"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs299"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                android:fontFamily="@font/aclonica"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/bafn"
                app:layout_constraintTop_toBottomOf="@+id/bafn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/babut"
                android:layout_width="85dp"
                android:layout_height="30dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/adcshape"
                android:fontFamily="@font/aclonica"
                android:text="@string/buy_again"
                android:textAllCaps="false"
                app:cardBackgroundColor="#4BFF5D"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>